--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Guillermo Soriano</title>
+	<link href="css/styles.css" rel="stylesheet">
+</head>
+<body background= "images/GSD.jpg">
+  <h1><em>Guillermo Soriano's Info. Web Site</em></h1>
+  <img src="images/TRANSAMWS6.jpg" alt="315 Rear End" width="360" height="239">
+  <br>
+  <h2><strong>About Me</strong>
+    <p><font size="3" face="arial" color="white">My name is Guillermo Soriano Arrieta, i was born in Tulancingo De Bravo, Hidalgo MX on 1993, and was raised in South TX for 21 years I'm currently 25 years of age. Currently embarking in the Hola Code program to aquire knowledge & gain the sills to become a reputable programmer.</font></p>
+  </h2>
+  <br>
+  <h3><strong>EXPERIENCE</strong></h3>
+      <ul>
+      	<li>
+      </ul>
+</body>
+</html>
