--- a/index.html
+++ b/index.html
@@ -9,12 +9,27 @@
   <img src="images/TRANSAMWS6.jpg" alt="315 Rear End" width="360" height="239">
   <br>
   <h2><strong>About Me</strong>
-    <p><font size="3" face="arial" color="white">My name is Guillermo Soriano Arrieta, i was born in Tulancingo De Bravo, Hidalgo MX on 1993, and was raised in South TX for 21 years I'm currently 25 years of age. Currently embarking in the Hola Code program to aquire knowledge & gain the sills to become a reputable programmer.</font></p>
+    <p><font size="3" face="arial" color="white">My name is Guillermo Soriano Arrieta, i was born in Tulancingo De Bravo, Hidalgo MX on 1993, and was raised in South TX for 21 years I'm currently 25 years of age. Currently live in Mexico City and am embarking in the Hola Code program to aquire knowledge & gain the skills to become a reputable programmer.</font></p>
   </h2>
-  <br>
+  <img src="images/Windows.jpg" alt="Windows Logo" width="180" height="80" align="right" >
+  
   <h3><strong>EXPERIENCE</strong></h3>
       <ul>
-      	<li>
+      	<li> Automotive Repair
+      	<li> Engine Contorl Module (ECM) Re-Flashing	
+      	<li> PC Repair
+      	<li> Oil Well Drilling
+      	<li> Windows OS Certs.
+      	<li> Tech Support
+      	<li> Pet Ownership
       </ul>
+   
+   <h4>Recent Work</h4>
+     <p><a href="https://github.com/Guillermo-Soriano/Practice_Files.git">CLICK TO VIEW</a></p>
+  <br>
+  <h5><center>CONTACT</center></h5>
+    <p><center><font face="arial" color="white">guillermo.soriano.arrieta@gmail.com
+  <br>
+    PH# +52 867 243 3703</p>
 </body>
 </html>
